Fix funding schedules for goal budgets without a dtstart
Also fix how the UI was determing if a budget was behind or not: it was lacking the information from the server to determine that.
