# app/moneypools/api/v1/serializers.py
@@ -406,6 +406,8 @@ class BudgetSerializer(serializers.ModelSerializer):
             "bank_account",
             "balance",
             "balance_currency",
+            "funded_amount",
+            "funded_amount_currency",
             "target_balance",
             "target_balance_currency",
             "funding_amount",
@@ -431,6 +433,8 @@ class BudgetSerializer(serializers.ModelSerializer):
             "id",
             "balance",
             "balance_currency",
+            "funded_amount",
+            "funded_amount_currency",
             "target_balance_currency",
             "funding_amount_currency",
             "complete",
